overflow: visible was the issue with animation on safari

--- a/scss/animations.scss
+++ b/scss/animations.scss
@@ -1,9 +1,9 @@
-body {
-	transform: translate3d(0, 0, 0);
-	-webkit-transform: translate3d(0, 0, 0);
-	perspective: 1000;
-	-webkit-perspective: 1000;
-}
+// body {
+// 	transform: translate3d(0, 0, 0);
+// 	-webkit-transform: translate3d(0, 0, 0);
+// 	perspective: 1000;
+// 	-webkit-perspective: 1000;
+// }
 
 .hover-1 {
 	transform: perspective(1500px) rotateY(15deg);
